force-app/main/default/objects/Account/fields/Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition__c</fullName>
    <label>Medical Condition</label>
    <type>TextArea</type>
</CustomField>