force-app/main/default/objects/Account/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <label>Patient City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>